# launch_service

./: .gitignore  Cargo.toml  README.md  profile.yaml  settings.yaml
src/: execute.rs  main.rs
src/configurator/: configs.rs  mod.rs
src/execute/: mod.rs
src/query/: checker.rs  mod.rs  query.rs  response.rs  service.rs
src/query/checkers/: bundle_checker.rs  checker.rs  hidden_checker.rs  ignore_checker.rs  mod.rs  symlink_checker.rs
src/query/matcher/: cleaner.rs  matcher.rs  mod.rs
src/utils/: mod.rs  tilde_expander.rs
src/utils/cache/: cacheable.rs  manager.rs  mod.rs
src/utils/serde/: binary_style.rs  deserializer.rs  mod.rs  serializer.rs
