[package]
name = "launch_service"
version = "0.1.0"
authors = ["Yaxin Cheng <yaxin.cheng@dal.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
shellexpand = "1.1.1"
futures = "0.3.5"
async-std = "1.6.0"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"