[package]
name = "launch_service"
version = "0.2.0"
authors = ["Yaxin Cheng <yaxin.cheng@dal.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
shellexpand = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"